# cs197-systems

./: .gitignore  README.md
arith_circuits/: brute_force.cpp  log.txt  polynomial.h  stochastic.cpp  stochastic_faster.cpp
arith_circuits/assignment-2-related-work/: main.tex
auto_incremental/: log.txt
inclusion_exclusion/: gen_pairing_sol.c  log.txt  merge.c  solver.py  subset_example.rs  timings.mpl
inclusion_exclusion/bignum/: Makefile  bignum.c
inclusion_exclusion/c_gmp/: cleanMerge.c  cleanParse.c  gen_pairing_sol.c  main.c  satsolver.h
inclusion_exclusion/custom_bignum/: bignum.c  cleanMerge.c  cleanParse.c  gen_pairing_sol.c  main.c  satsolver.h
inclusion_exclusion/matthew_chaff/: basic.c  fast.c
inclusion_exclusion/prototype_solver/: .gitignore  Cargo.toml  README.md
inclusion_exclusion/prototype_solver/benches/: n_taut.rs
inclusion_exclusion/prototype_solver/correctness_samples/unsat/: b.cnf  c.cnf
inclusion_exclusion/prototype_solver/samples/unsat/: a.cnf  b.cnf
inclusion_exclusion/prototype_solver/src/: clauses.rs  dnf.rs  lib.rs  load.rs  main.rs
inclusion_exclusion/prototype_solver/src/clauses/: bit.rs  compressed.rs  map.rs  mod.rs  vec.rs  vec_bit.rs
inclusion_exclusion/prototype_solver/src/counters/: bignum.rs  float.rs  gmp.rs  mod.rs
latex-templates/assignment-2-related-work/: sigchi.cls
latex-templates/final-paper/: abstract.tex  conclusion.tex  future.tex  implementation.tex  introduction.tex  limitations.tex  main.bib  main.tex  preamble.tex  related.tex
proto_verify/: 10_16_mtg.txt  log.txt
slides/: project-ideas.txt
(+29 files in other folders)
