[package]
name = "inc_exc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
nom = "7.1.1"
rand = "0.8.5"
roaring = "0.10.1"
rug = { version = "1.17.0", default-features = false, features = ["integer"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "n_taut"
harness = false
